1.5/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: multitool-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
